[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# `phantom` is already taken on PyPI, so we publish under a unique
# slug. The CLI command stays `phantom` (set via the script entry
# point below); only the install command changes.
name = "phantom-osint"
version = "1.0.0"
description = "Accuracy-first OSINT username checker across 100+ platforms with confidence scoring, identity disambiguation, and a Maltego-style investigation dossier."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "hamaffs" },
]
keywords = ["osint", "username", "social-media", "identity", "investigation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiodns>=3.1.0",
    "brotli>=1.1.0",
    "curl_cffi>=0.7.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
    "opencv-python>=4.8.0",
    "playwright>=1.40.0",
    "textual>=0.40.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/hamaffs/Phantom-"
Source = "https://github.com/hamaffs/Phantom-"
Issues = "https://github.com/hamaffs/Phantom-/issues"

[project.scripts]
# `pip install phantom-osint` exposes `phantom` on PATH, calling main().
phantom = "checker:main"

[tool.setuptools]
# Phantom is a flat-layout module collection, not a package. List the
# modules explicitly to avoid setuptools trying to auto-discover.
# `include-package-data = true` works with MANIFEST.in to ship the
# loose data files (sites.json, canaries.json).
include-package-data = true
py-modules = [
    "analyst",
    "checker",
    "cli",
    "models",
    "scanner",
    "cache",
    "terminal",
    "dedupe",
    "emails",
    "expand",
    "facebook_search",
    "hints",
    "identity",
    "enrich",
    "disambiguation",
    "confidence",
    "variants",
    "watch",
    "stylometry",
    "wayback",
    "github_deep",
    "photo_ocr",
    "self_check",
    "discover_site",
    "validate_sites",
    "playwright_backend",
    "photo_deep",
    "apis",
    "tui_assets",
    "tui_launcher",
    "tui_app",
]
packages = ["exporters", "graph", "tests", "transforms"]

# sites.json and canaries.json get installed to `share/phantom/` next
# to the venv. cli.py looks for them there as a fallback.
[tool.setuptools.data-files]
"share/phantom" = ["sites.json", "tests/canaries.json"]
